--- a/views/content.html
+++ b/views/content.html
@@ -348,17 +348,17 @@ Addons may add buttons to the top-right and bottom-right corner. Buttons to add 
 			
             <div class="extension-matter-adapter-overlay rule-edit-overlay extension-matter-adapter-delete">
                 <div class="rule-delete-dialog">
-                    <p>Are you sure you want to remove this device from the Matter network?</p>
-                    <input class="rule-delete-cancel-button" type="button" data-l10n-id="rule-delete-cancel-button" value="Cancel">
-                    <input class="rule-delete-confirm-button" type="button" value="Force remove">
+                    <p>Are you sure you want to remove this device from your Matter network?</p>
+                    <input class="extension-matter-adapter-item-delete-cancel-button text-button" type="button" data-l10n-id="rule-delete-cancel-button" value="Cancel">
+                    <input class="extension-matter-adapter-item-delete-confirm-button text-button" type="button" value="Remove">
                 </div>
             </div>
   			
             <div class="extension-matter-adapter-overlay rule-edit-overlay extension-matter-adapter-update">
                 <div class="rule-delete-dialog">
                     <p>Are you sure you want to update the firmware of this device? <!--Please <span class="extension-matter-adapter-read-about-risks">read about the risks</a> first.--></p>
-                    <input class="extension-matter-adapter-overlay-cancel-update-button rule-delete-cancel-button" type="button" data-l10n-id="rule-delete-cancel-button" value="Cancel">
-                    <input class="extension-matter-adapter-overlay-start-update-button rule-delete-confirm-button" type="button" value="Update">
+                    <input class="extension-matter-adapter-overlay-cancel-update-button rule-delete-cancel-button text-button" type="button" data-l10n-id="rule-delete-cancel-button" value="Cancel">
+                    <input class="extension-matter-adapter-overlay-start-update-button rule-delete-confirm-button text-button" type="button" value="Update">
                 </div>
             </div>
 			
@@ -377,10 +377,10 @@ Addons may add buttons to the top-right and bottom-right corner. Buttons to add 
             
             <div class="extension-matter-adapter-overlay rule-edit-overlay extension-matter-adapter-share">
                 <div class="rule-delete-dialog">
-                    <p class="extension-matter-adapter-share-question">Would you like to share this device with another Matter controller?</p>
-                    <p class="extension-matter-adapter-share-code"></p>
+                    <!--<p class="extension-matter-adapter-share-question">Would you like to share this device with another Matter controller?</p>-->
+                    <p class="extension-matter-adapter-share-code">Would you like to share this device with another Matter controller?</p>
                     <input class="extension-matter-adapter-rule-share-cancel-button text-button" type="button" data-l10n-id="rule-delete-cancel-button" value="Cancel">
-                    <input class="extension-matter-adapter-rule-share-confirm-button text-button" type="button" value="Yes">
+                    <input class="extension-matter-adapter-rule-share-confirm-button text-button" type="button" value="Share">
                     
                 </div>
             </div>
