--- a/views/content.html
+++ b/views/content.html
@@ -184,7 +184,7 @@ Addons may add buttons to the top-right and bottom-right corner. Buttons to add 
                     <div id="extension-matter-adapter-pairing-step-network-code" class="extension-matter-adapter-area">
                         <h4>Please enter the pairing pin code</h4>
                         <p>The app or controller that you used to share the new device with will also have provided a pairing pin code - likely a number. Please enter that here.</p>
-                        <input id="extension-matter-adapter-network-pairing-code-input" type="text" placeholder="1234567"/>
+                        <input id="extension-matter-adapter-network-pairing-code-input" type="text" placeholder="1234"/>
 						<div class="extension-matter-adapter-align-right">
                             <button id="extension-matter-adapter-start-network-pairing-button" class="text-button extension-matter-adapter-start-pairing-button">Start network pairing</button>
 							<!--<button id="extension-matter-adapter-save-network-pairing-code-button" class="text-button">Save</button>-->
