--- a/views/content.html
+++ b/views/content.html
@@ -142,8 +142,8 @@ Addons may add buttons to the top-right and bottom-right corner. Buttons to add 
 
 							<div id="extension-matter-adapter-mobile-qr">
                                 <p>Open the Candle QR code scanner to find the pairing code. You will have to grant permission to use your camera.</p>
-							    <div style="background-color:white; padding:0 2rem 2rem 2rem; text-align:center">
-								    <a id="extension-matter-adapter-mobile-qr-scan-link" href="https://www.candlesmarthome.com/qr"><span id="extension-matter-adapter-mobile-short-qr-scan-url">candlesmarthome.com/qr</span></a>
+							    <div id="extension-matter-adapter-mobile-qr-button">
+								    <a id="extension-matter-adapter-mobile-qr-scan-link" href="https://www.candlesmarthome.com/qr" target="_blank"><span id="extension-matter-adapter-mobile-short-qr-scan-url">candlesmarthome.com/qr</span></a>
 							    </div>
                             </div>
 
