--- a/views/content.html
+++ b/views/content.html
@@ -85,7 +85,7 @@
 						<p>If it's a WiFi based device you will also need to provide the WiFi name and password.</p>
 						<div id="extension-matter-adapter-current-wifi-ssid-container" class="extension-matter-adapter-hidden">
 							<p>Wifi credentials will be shared for: <span id="extension-matter-adapter-current-wifi-ssid">...</span><p>
-							<button id="extension-matter-adapter-reveal-wifi-setup-button">Change</button>
+							<button id="extension-matter-adapter-reveal-wifi-setup-button" class="text-button">Change</button>
 						</div>
 						<div id="extension-matter-adapter-provide-wifi-container">
 							<input type="text" id="extension-matter-adapter-wifi-ssid" placeholder="WiFi name"/>
@@ -183,11 +183,11 @@
 						<h4>Ready to pair</h4>
 
                         <p>Using pairing code: <span id="extension-matter-adapter-pairing-start-area-pairing-code">Error!</span></p>
-						<div id="extension-matter-adapter-busy-updating-certificates" class="extension-matter-adapter-hidden">
+						<div id="extension-matter-adapter-busy-updating-certificates" class="extension-matter-adapter-hidden extension-matter-adapter-area">
 							<div class="extension-matter-adapter-spinner">
 								<div></div><div></div><div></div><div></div>
 							</div>
-							<p style"text-align:center">Updating certificates... please wait</p>
+							<p style="text-align:center">Updating certificates... please wait</p>
 						</div>
                         
                         <div id="extension-matter-adapter-pairing-bluetooth-hint">
