--- a/views/content.html
+++ b/views/content.html
@@ -35,6 +35,10 @@
     				    </div>
     			    </div>
                     
+                    <div id="extension-matter-adapter-delete-thing-hint" class="text-button extension-matter-adapter-hidden">
+                        <p>You have deleted a Matter device. Now you will also have to manually remove the corresponding <a href="/things">thing</a>.
+                    </div>
+                    
                     <div id="extension-matter-adapter-paired-devices-list">
                     </div>
                     
@@ -84,14 +88,20 @@
 						<h4>Provide WiFi credentials</h4>
 						<p>If it's a WiFi based device you will also need to provide the WiFi name and password.</p>
 						<div id="extension-matter-adapter-current-wifi-ssid-container" class="extension-matter-adapter-hidden">
-							<p>Wifi credentials will be shared for: <span id="extension-matter-adapter-current-wifi-ssid">...</span><p>
-							<button id="extension-matter-adapter-reveal-wifi-setup-button" class="text-button">Change</button>
+							<p>WiFi credentials will be shared for: <span id="extension-matter-adapter-current-wifi-ssid">...</span><p>
+							<div class="extension-matter-adapter-align-right">
+                                <button id="extension-matter-adapter-reveal-wifi-setup-button" class="text-button">Change</button>
+                            </div>
 						</div>
 						<div id="extension-matter-adapter-provide-wifi-container">
 							<input type="text" id="extension-matter-adapter-wifi-ssid" placeholder="WiFi name"/>
-							<input type="text" id="extension-matter-adapter-wifi-password" placeholder="WiFi password"/>
-
-							<input type="checkbox" id="extension-matter-adapter-wifi-remember-checkbox" name="extension-matter-adapter-wifi-remember-checkbox" data-val="true" and value="true"/><label for="extension-matter-adapter-wifi-remember-checkbox">Remember WiFi name and password</label>
+							<input type="password" id="extension-matter-adapter-wifi-password" placeholder="WiFi password"/>
+                            <div class="extension-matter-adapter-checkbox-container">
+                                <input type="checkbox" id="extension-matter-adapter-wifi-show-password-checkbox" name="extension-matter-adapter-wifi-show-password-checkbox" data-val="true" and value="true"/><label for="extension-matter-adapter-wifi-show-password-checkbox">Show password</label>
+                            </div>
+                            <div class="extension-matter-adapter-checkbox-container">
+                                <input type="checkbox" id="extension-matter-adapter-wifi-remember-checkbox" name="extension-matter-adapter-wifi-remember-checkbox" data-val="true" and value="true"/><label for="extension-matter-adapter-wifi-remember-checkbox">Remember WiFi name and password</label>
+                            </div>
 						</div>
 
 						<!--
@@ -135,7 +145,7 @@
                             </div>
 
 							<div class="extension-matter-adapter-align-right">
-								<button id="extension-matter-adapter-show-more-pairing-options-button" class="text-button">Show other options</button>
+								<button id="extension-matter-adapter-show-more-pairing-options-button" class="text-button">More options</button>
 							</div>
 
 							<div id="extension-matter-adapter-other-pairing-options-container" class="extension-matter-adapter-hidden">
@@ -173,7 +183,7 @@
                         <p>The app or controller that you used to share the new device with will also have provided a pairing pin code - likely a number. Please enter that here.</p>
                         <input id="extension-matter-adapter-network-pairing-code-input" type="text" placeholder="1234"/>
 						<div class="extension-matter-adapter-align-right">
-                            <button id="extension-matter-adapter-start-network-pairing-button" class="text-button extension-matter-adapter-start-pairing-button">Start network pairing</button>
+                            <button id="extension-matter-adapter-start-network-pairing-button" class="text-button extension-matter-adapter-start-pairing-button">Start pairing</button>
 							<!--<button id="extension-matter-adapter-save-network-pairing-code-button" class="text-button">Save</button>-->
 						</div>
                     </div>
@@ -193,12 +203,12 @@
                         <div id="extension-matter-adapter-pairing-bluetooth-hint">
     						<ul>
     							<li>The device must be within Bluetooth range of the Candle Controller</li>
-    							<li>It's recommended to factory reset the device</li>
+    							<li>It's recommended to factory reset the device now</li>
     						</ul>
                         </div>
                         
 						<div class="extension-matter-adapter-align-right">
-							<button id="extension-matter-adapter-start-normal-pairing-button" class="text-button extension-matter-adapter-start-pairing-button">Start normal pairing</button>
+							<button id="extension-matter-adapter-start-normal-pairing-button" class="text-button extension-matter-adapter-start-pairing-button">Start pairing</button>
 						</div>
 
 						
@@ -213,7 +223,14 @@
 						</div>
 						<div id="extension-matter-adapter-pairing-failed-hint" class="extension-matter-adapter-area extension-matter-adapter-error extension-matter-adapter-hidden">
 							<h4>Pairing failed</h4>
-							<button id="extension-matter-adapter-pairing-failed-try-again-button" class="text-button">Try again</button>
+                            <p>Try pressing the pairing button again first. If that doesn't work, then you can go back to the start of the process.</p>
+							<div class="extension-matter-adapter-align-right">
+                                <button id="extension-matter-adapter-pairing-failed-try-again-button" class="text-button">Back to the start</button>
+                            </div>
+						</div>
+						<div id="extension-matter-adapter-pairing-success-hint" class="extension-matter-adapter-area extension-matter-adapter-success extension-matter-adapter-hidden">
+							<h4>Pairing complete</h4>
+                            <p>You can now go the the <a href="/things">things</a> page and add the new thing there.</p>
 						</div>
                     </div>
 					<!--
@@ -335,7 +352,7 @@
 			
             <div class="extension-matter-adapter-overlay rule-edit-overlay extension-matter-adapter-delete">
                 <div class="rule-delete-dialog">
-                    <p>Are you sure you want to remove this device from your Matter network?</p>
+                    <p class="extension-matter-adapter-overlay-delete-text">Are you sure you want to remove this device from your Matter network?</p>
                     <input class="extension-matter-adapter-item-delete-cancel-button text-button" type="button" data-l10n-id="rule-delete-cancel-button" value="Cancel">
                     <input class="extension-matter-adapter-item-delete-confirm-button text-button" type="button" value="Remove">
                 </div>
