--- a/views/content.html
+++ b/views/content.html
@@ -252,7 +252,7 @@
                         <div id="extension-matter-adapter-pairing-bluetooth-hint">
     						<ul>
     							<li>The device must be within Bluetooth range of the Candle Controller</li>
-    							<li>It's recommended to factory reset the device now</li>
+    							<li>Please get your new device into pairing mode. If possible it's recommended to factory reset it.</li>
     						</ul>
                         </div>
                         
@@ -264,7 +264,7 @@
 					</div>
                     
                     <div id="extension-matter-adapter-pairing-busy-step">
-						<div id="extension-matter-adapter-busy-pairing-indicator" class="extension-matter-adapter-area extension-matter-adapter-hidden">
+						<div id="extension-matter-adapter-busy-pairing-indicator" class="extension-matter-adapter-area">
 							<div class="extension-matter-adapter-spinner">
 								<div></div><div></div><div></div><div></div>
 							</div>
